compiler/tests/fixtures/invalid/semantics/selector_candidate_fails_to_precast_initiator.viv
// Invalid: selector candidate fails to precast initiator

reserved action respond:
    roles:
        @responder:
            as: initiator
        @witness:
            as: bystander

action wave:
    roles:
        @waver:
            as: initiator

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        respond:
            with partial:
                @witness: @actor
        ;
        wave;
